fix-overflows

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -21,6 +21,7 @@
         background-color: white;
         min-width: 30vw;
         max-height: 85vh;
+        max-width: 70vw;
         overflow-y: auto;
         overflow-x: hidden;
         border: 1px solid lightgray;
@@ -35,6 +36,7 @@
             background-color: #000000;
             min-width: 30vw;
             max-height: 85vh;
+            max-width: 70vw;
             overflow-y: auto;
             overflow-x: hidden;
             border: 1px solid #424244;
