--- a/src/components/TextData/textdata.scss
+++ b/src/components/TextData/textdata.scss
@@ -4,6 +4,7 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
+        overflow: auto;
     }
 
     &__label {
